deploy: e5490da71203bea96cb8067587a7e53c9f9e37f2

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "256d4901",
+   "id": "a6f6811d",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "708a4384",
+   "id": "6f700f16",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca8e035f",
+   "id": "e0850d4e",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58844561",
+   "id": "7ac0f1c0",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98d3bb93",
+   "id": "6a793b73",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22ff39a4",
+   "id": "aae2d971",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "38a0daec",
+   "id": "2db0efaf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:25.336402Z",
-     "iopub.status.busy": "2025-06-24T14:53:25.336218Z",
-     "iopub.status.idle": "2025-06-24T14:53:28.713034Z",
-     "shell.execute_reply": "2025-06-24T14:53:28.712375Z"
+     "iopub.execute_input": "2025-06-27T11:44:30.337910Z",
+     "iopub.status.busy": "2025-06-27T11:44:30.337635Z",
+     "iopub.status.idle": "2025-06-27T11:44:33.603629Z",
+     "shell.execute_reply": "2025-06-27T11:44:33.603067Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37b3dd18",
+   "id": "4b016899",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16be7f5c",
+   "id": "4bb1bfcc",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018c4e64",
+   "id": "d5dd1535",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2721a5f7",
+   "id": "0ba91164",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fe53239",
+   "id": "17469038",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2758c691",
+   "id": "641f4a59",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f475b4f5",
+   "id": "f1d0e474",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e52aad99",
+   "id": "b9b5d050",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "77434566",
+   "id": "8ce0ebb0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:28.715596Z",
-     "iopub.status.busy": "2025-06-24T14:53:28.715118Z",
-     "iopub.status.idle": "2025-06-24T14:53:31.030171Z",
-     "shell.execute_reply": "2025-06-24T14:53:31.029582Z"
+     "iopub.execute_input": "2025-06-27T11:44:33.606134Z",
+     "iopub.status.busy": "2025-06-27T11:44:33.605621Z",
+     "iopub.status.idle": "2025-06-27T11:44:35.726919Z",
+     "shell.execute_reply": "2025-06-27T11:44:35.726254Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "642382b3",
+   "id": "50a9338d",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "33f531d7",
+   "id": "f0ddf52a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:31.032285Z",
-     "iopub.status.busy": "2025-06-24T14:53:31.032037Z",
-     "iopub.status.idle": "2025-06-24T14:53:31.036257Z",
-     "shell.execute_reply": "2025-06-24T14:53:31.035504Z"
+     "iopub.execute_input": "2025-06-27T11:44:35.729053Z",
+     "iopub.status.busy": "2025-06-27T11:44:35.728654Z",
+     "iopub.status.idle": "2025-06-27T11:44:35.732520Z",
+     "shell.execute_reply": "2025-06-27T11:44:35.731958Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba5fc52d",
+   "id": "007d0d1d",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c755d26e",
+   "id": "4bf6a60d",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95a0c69a",
+   "id": "56aa6c53",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc7e106b",
+   "id": "c9bbf907",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "35149626",
+   "id": "e56f3039",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:31.038140Z",
-     "iopub.status.busy": "2025-06-24T14:53:31.037957Z",
-     "iopub.status.idle": "2025-06-24T14:53:31.086939Z",
-     "shell.execute_reply": "2025-06-24T14:53:31.086336Z"
+     "iopub.execute_input": "2025-06-27T11:44:35.734454Z",
+     "iopub.status.busy": "2025-06-27T11:44:35.734279Z",
+     "iopub.status.idle": "2025-06-27T11:44:35.780519Z",
+     "shell.execute_reply": "2025-06-27T11:44:35.779989Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1142ff95",
+   "id": "6ede4307",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "47052543",
+   "id": "1340427d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:31.089002Z",
-     "iopub.status.busy": "2025-06-24T14:53:31.088641Z",
-     "iopub.status.idle": "2025-06-24T14:53:31.165506Z",
-     "shell.execute_reply": "2025-06-24T14:53:31.164950Z"
+     "iopub.execute_input": "2025-06-27T11:44:35.782594Z",
+     "iopub.status.busy": "2025-06-27T11:44:35.782195Z",
+     "iopub.status.idle": "2025-06-27T11:44:35.854427Z",
+     "shell.execute_reply": "2025-06-27T11:44:35.853880Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a61e4687",
+   "id": "ea82f065",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fdd7294",
+   "id": "aac58d61",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b4ca7cc0",
+   "id": "df523a61",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:31.167523Z",
-     "iopub.status.busy": "2025-06-24T14:53:31.167209Z",
-     "iopub.status.idle": "2025-06-24T14:53:31.197737Z",
-     "shell.execute_reply": "2025-06-24T14:53:31.197082Z"
+     "iopub.execute_input": "2025-06-27T11:44:35.856540Z",
+     "iopub.status.busy": "2025-06-27T11:44:35.856156Z",
+     "iopub.status.idle": "2025-06-27T11:44:35.886486Z",
+     "shell.execute_reply": "2025-06-27T11:44:35.885963Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "551fa022",
+   "id": "60464d6c",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bee1ac5",
+   "id": "7d73ffe8",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1cd005c",
+   "id": "08fc2853",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea300ad7",
+   "id": "f743558e",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73cdebf",
+   "id": "ecba88df",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "44c16939",
+   "id": "258b6c29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:31.199953Z",
-     "iopub.status.busy": "2025-06-24T14:53:31.199501Z",
-     "iopub.status.idle": "2025-06-24T14:53:31.203991Z",
-     "shell.execute_reply": "2025-06-24T14:53:31.203385Z"
+     "iopub.execute_input": "2025-06-27T11:44:35.888478Z",
+     "iopub.status.busy": "2025-06-27T11:44:35.888276Z",
+     "iopub.status.idle": "2025-06-27T11:44:35.892863Z",
+     "shell.execute_reply": "2025-06-27T11:44:35.892205Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de03e847",
+   "id": "58807742",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c2aae2cf",
+   "id": "9eda66a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:31.206058Z",
-     "iopub.status.busy": "2025-06-24T14:53:31.205722Z",
-     "iopub.status.idle": "2025-06-24T14:53:31.208853Z",
-     "shell.execute_reply": "2025-06-24T14:53:31.208228Z"
+     "iopub.execute_input": "2025-06-27T11:44:35.894828Z",
+     "iopub.status.busy": "2025-06-27T11:44:35.894385Z",
+     "iopub.status.idle": "2025-06-27T11:44:35.897599Z",
+     "shell.execute_reply": "2025-06-27T11:44:35.896931Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b286be6f",
+   "id": "02ccf07f",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "74b79d37",
+   "id": "f75db5fa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:31.210657Z",
-     "iopub.status.busy": "2025-06-24T14:53:31.210480Z",
-     "iopub.status.idle": "2025-06-24T14:53:33.920305Z",
-     "shell.execute_reply": "2025-06-24T14:53:33.919640Z"
+     "iopub.execute_input": "2025-06-27T11:44:35.899488Z",
+     "iopub.status.busy": "2025-06-27T11:44:35.899166Z",
+     "iopub.status.idle": "2025-06-27T11:44:38.537200Z",
+     "shell.execute_reply": "2025-06-27T11:44:38.536567Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48fed546",
+   "id": "96d9e0e4",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f9c76c",
+   "id": "af57e28d",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38eceab3",
+   "id": "2eb5011d",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b4c0cfb",
+   "id": "be13b0cc",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9153eea2",
+   "id": "e3e17679",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:33.922473Z",
-     "iopub.status.busy": "2025-06-24T14:53:33.922245Z",
-     "iopub.status.idle": "2025-06-24T14:53:33.926310Z",
-     "shell.execute_reply": "2025-06-24T14:53:33.925692Z"
+     "iopub.execute_input": "2025-06-27T11:44:38.539402Z",
+     "iopub.status.busy": "2025-06-27T11:44:38.538999Z",
+     "iopub.status.idle": "2025-06-27T11:44:38.542659Z",
+     "shell.execute_reply": "2025-06-27T11:44:38.542099Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f4d9f5f2840>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f289209b7e0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9adaa80d",
+   "id": "e0e5f2d0",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75c01e30",
+   "id": "92fa457f",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f492f1e",
+   "id": "1b3c54c1",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f9a2f64",
+   "id": "e76c1368",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "db021fed",
+   "id": "7ddb7062",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:33.928373Z",
-     "iopub.status.busy": "2025-06-24T14:53:33.928145Z",
-     "iopub.status.idle": "2025-06-24T14:53:33.931481Z",
-     "shell.execute_reply": "2025-06-24T14:53:33.930845Z"
+     "iopub.execute_input": "2025-06-27T11:44:38.544854Z",
+     "iopub.status.busy": "2025-06-27T11:44:38.544493Z",
+     "iopub.status.idle": "2025-06-27T11:44:38.547673Z",
+     "shell.execute_reply": "2025-06-27T11:44:38.547022Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ca18f525",
+   "id": "49ae8aaf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-24T14:53:33.933420Z",
-     "iopub.status.busy": "2025-06-24T14:53:33.933066Z",
-     "iopub.status.idle": "2025-06-24T14:53:35.041050Z",
-     "shell.execute_reply": "2025-06-24T14:53:35.040413Z"
+     "iopub.execute_input": "2025-06-27T11:44:38.549681Z",
+     "iopub.status.busy": "2025-06-27T11:44:38.549333Z",
+     "iopub.status.idle": "2025-06-27T11:44:39.605100Z",
+     "shell.execute_reply": "2025-06-27T11:44:39.604529Z"
     }
    },
    "outputs": [
