deploy: c1672d335d24410753c565d0ff4ca1019cb61207

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a6f6811d",
+   "id": "11b448d0",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f700f16",
+   "id": "6a5f6453",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0850d4e",
+   "id": "6295e329",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ac0f1c0",
+   "id": "ed822dbe",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a793b73",
+   "id": "80c722dc",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aae2d971",
+   "id": "b4e83683",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2db0efaf",
+   "id": "de932357",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:30.337910Z",
-     "iopub.status.busy": "2025-06-27T11:44:30.337635Z",
-     "iopub.status.idle": "2025-06-27T11:44:33.603629Z",
-     "shell.execute_reply": "2025-06-27T11:44:33.603067Z"
+     "iopub.execute_input": "2025-06-27T12:47:59.871177Z",
+     "iopub.status.busy": "2025-06-27T12:47:59.870732Z",
+     "iopub.status.idle": "2025-06-27T12:48:03.170417Z",
+     "shell.execute_reply": "2025-06-27T12:48:03.169847Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b016899",
+   "id": "f00353f7",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bb1bfcc",
+   "id": "c7f61f88",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5dd1535",
+   "id": "5bb36d47",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba91164",
+   "id": "5635ef9f",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17469038",
+   "id": "29af24b9",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "641f4a59",
+   "id": "13a04d61",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d0e474",
+   "id": "29947f4e",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9b5d050",
+   "id": "8c6ed796",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8ce0ebb0",
+   "id": "bfed1f78",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:33.606134Z",
-     "iopub.status.busy": "2025-06-27T11:44:33.605621Z",
-     "iopub.status.idle": "2025-06-27T11:44:35.726919Z",
-     "shell.execute_reply": "2025-06-27T11:44:35.726254Z"
+     "iopub.execute_input": "2025-06-27T12:48:03.172719Z",
+     "iopub.status.busy": "2025-06-27T12:48:03.172253Z",
+     "iopub.status.idle": "2025-06-27T12:48:05.402695Z",
+     "shell.execute_reply": "2025-06-27T12:48:05.402091Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50a9338d",
+   "id": "a1f80a91",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f0ddf52a",
+   "id": "a8ae6778",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:35.729053Z",
-     "iopub.status.busy": "2025-06-27T11:44:35.728654Z",
-     "iopub.status.idle": "2025-06-27T11:44:35.732520Z",
-     "shell.execute_reply": "2025-06-27T11:44:35.731958Z"
+     "iopub.execute_input": "2025-06-27T12:48:05.404738Z",
+     "iopub.status.busy": "2025-06-27T12:48:05.404348Z",
+     "iopub.status.idle": "2025-06-27T12:48:05.407880Z",
+     "shell.execute_reply": "2025-06-27T12:48:05.407262Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "007d0d1d",
+   "id": "7817bda0",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bf6a60d",
+   "id": "7140aa6b",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56aa6c53",
+   "id": "2ccfed53",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9bbf907",
+   "id": "4a530f05",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e56f3039",
+   "id": "c74d9e8c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:35.734454Z",
-     "iopub.status.busy": "2025-06-27T11:44:35.734279Z",
-     "iopub.status.idle": "2025-06-27T11:44:35.780519Z",
-     "shell.execute_reply": "2025-06-27T11:44:35.779989Z"
+     "iopub.execute_input": "2025-06-27T12:48:05.409655Z",
+     "iopub.status.busy": "2025-06-27T12:48:05.409490Z",
+     "iopub.status.idle": "2025-06-27T12:48:05.455800Z",
+     "shell.execute_reply": "2025-06-27T12:48:05.455235Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ede4307",
+   "id": "968721f1",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1340427d",
+   "id": "524d665e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:35.782594Z",
-     "iopub.status.busy": "2025-06-27T11:44:35.782195Z",
-     "iopub.status.idle": "2025-06-27T11:44:35.854427Z",
-     "shell.execute_reply": "2025-06-27T11:44:35.853880Z"
+     "iopub.execute_input": "2025-06-27T12:48:05.457677Z",
+     "iopub.status.busy": "2025-06-27T12:48:05.457493Z",
+     "iopub.status.idle": "2025-06-27T12:48:05.530137Z",
+     "shell.execute_reply": "2025-06-27T12:48:05.529515Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea82f065",
+   "id": "1c463f58",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aac58d61",
+   "id": "bb3fdd89",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "df523a61",
+   "id": "c2f4ff2a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:35.856540Z",
-     "iopub.status.busy": "2025-06-27T11:44:35.856156Z",
-     "iopub.status.idle": "2025-06-27T11:44:35.886486Z",
-     "shell.execute_reply": "2025-06-27T11:44:35.885963Z"
+     "iopub.execute_input": "2025-06-27T12:48:05.532297Z",
+     "iopub.status.busy": "2025-06-27T12:48:05.531916Z",
+     "iopub.status.idle": "2025-06-27T12:48:05.561312Z",
+     "shell.execute_reply": "2025-06-27T12:48:05.560768Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60464d6c",
+   "id": "42ef71b6",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d73ffe8",
+   "id": "b6037d48",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08fc2853",
+   "id": "6dfeaa7c",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f743558e",
+   "id": "579095f9",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecba88df",
+   "id": "0256ea2c",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "258b6c29",
+   "id": "ab1dbb6d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:35.888478Z",
-     "iopub.status.busy": "2025-06-27T11:44:35.888276Z",
-     "iopub.status.idle": "2025-06-27T11:44:35.892863Z",
-     "shell.execute_reply": "2025-06-27T11:44:35.892205Z"
+     "iopub.execute_input": "2025-06-27T12:48:05.563541Z",
+     "iopub.status.busy": "2025-06-27T12:48:05.563170Z",
+     "iopub.status.idle": "2025-06-27T12:48:05.567744Z",
+     "shell.execute_reply": "2025-06-27T12:48:05.567020Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58807742",
+   "id": "ae5f0106",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9eda66a5",
+   "id": "7df16c60",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:35.894828Z",
-     "iopub.status.busy": "2025-06-27T11:44:35.894385Z",
-     "iopub.status.idle": "2025-06-27T11:44:35.897599Z",
-     "shell.execute_reply": "2025-06-27T11:44:35.896931Z"
+     "iopub.execute_input": "2025-06-27T12:48:05.569688Z",
+     "iopub.status.busy": "2025-06-27T12:48:05.569352Z",
+     "iopub.status.idle": "2025-06-27T12:48:05.572558Z",
+     "shell.execute_reply": "2025-06-27T12:48:05.571871Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ccf07f",
+   "id": "21c8f625",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f75db5fa",
+   "id": "7e7edf1f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:35.899488Z",
-     "iopub.status.busy": "2025-06-27T11:44:35.899166Z",
-     "iopub.status.idle": "2025-06-27T11:44:38.537200Z",
-     "shell.execute_reply": "2025-06-27T11:44:38.536567Z"
+     "iopub.execute_input": "2025-06-27T12:48:05.574360Z",
+     "iopub.status.busy": "2025-06-27T12:48:05.574027Z",
+     "iopub.status.idle": "2025-06-27T12:48:08.253956Z",
+     "shell.execute_reply": "2025-06-27T12:48:08.253342Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96d9e0e4",
+   "id": "a3c2efe6",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af57e28d",
+   "id": "0034b318",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eb5011d",
+   "id": "970ffaa0",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be13b0cc",
+   "id": "89b58165",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e3e17679",
+   "id": "af114d30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:38.539402Z",
-     "iopub.status.busy": "2025-06-27T11:44:38.538999Z",
-     "iopub.status.idle": "2025-06-27T11:44:38.542659Z",
-     "shell.execute_reply": "2025-06-27T11:44:38.542099Z"
+     "iopub.execute_input": "2025-06-27T12:48:08.256180Z",
+     "iopub.status.busy": "2025-06-27T12:48:08.255788Z",
+     "iopub.status.idle": "2025-06-27T12:48:08.259747Z",
+     "shell.execute_reply": "2025-06-27T12:48:08.259109Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f289209b7e0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fa5b496b7e0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0e5f2d0",
+   "id": "d975b832",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92fa457f",
+   "id": "d928a530",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b3c54c1",
+   "id": "bc9b8391",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76c1368",
+   "id": "99fd4e46",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7ddb7062",
+   "id": "b5460c5b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:38.544854Z",
-     "iopub.status.busy": "2025-06-27T11:44:38.544493Z",
-     "iopub.status.idle": "2025-06-27T11:44:38.547673Z",
-     "shell.execute_reply": "2025-06-27T11:44:38.547022Z"
+     "iopub.execute_input": "2025-06-27T12:48:08.261611Z",
+     "iopub.status.busy": "2025-06-27T12:48:08.261260Z",
+     "iopub.status.idle": "2025-06-27T12:48:08.264403Z",
+     "shell.execute_reply": "2025-06-27T12:48:08.263873Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "49ae8aaf",
+   "id": "4fe8c723",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-27T11:44:38.549681Z",
-     "iopub.status.busy": "2025-06-27T11:44:38.549333Z",
-     "iopub.status.idle": "2025-06-27T11:44:39.605100Z",
-     "shell.execute_reply": "2025-06-27T11:44:39.604529Z"
+     "iopub.execute_input": "2025-06-27T12:48:08.266256Z",
+     "iopub.status.busy": "2025-06-27T12:48:08.265889Z",
+     "iopub.status.idle": "2025-06-27T12:48:09.352988Z",
+     "shell.execute_reply": "2025-06-27T12:48:09.352387Z"
     }
    },
    "outputs": [
